# HeniTask

./: HeniTaskQuestions.ipynb  README.md  pyproject.toml  requirements.txt
HeniWebCrawler/: BearSpacePaintings.csv  scrapy.cfg
HeniWebCrawler/HeniWebCrawler/: items.py  middlewares.py  pipelines.py  settings.py
HeniWebCrawler/HeniWebCrawler/spiders/: bearspace.py
